--- a/styles/index.style.scss
+++ b/styles/index.style.scss
@@ -448,12 +448,36 @@
   .footer-inner {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    padding: 1rem 0;
+    
+    .footer-col-1{
+      display: flex;
+      flex-direction: column;
+      // justify-content: center;
+      align-items: flex-start;
+    }
     
     .footer-col-2{
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      // justify-content: center;
       align-items: center;
+    }
+  }
+  
+  .footer-link{
+    color: $fourth-color;
+    text-decoration: none;
+    font-size: .9rem;
+  }
+  .footer-ul{
+    display: flex;
+    flex-direction: column;
+    margin: .5rem 0;
+    
+    .footer-li{
+      list-style-type: none;
+      margin-top: 1rem;
     }
   }
   
@@ -1154,6 +1178,34 @@
       font-size: 2rem;
       font-weight: 1000;
       display: none;
+    }
+  }
+  
+  
+  .footer {
+    background: #f1f2f8;
+    height: auto;
+    .footer-inner {
+      display: grid;
+      grid-template-columns: (1fr);
+      grid-auto-rows: auto;
+      padding: 1rem 0;
+      
+      .footer-col-1{
+        grid-row: 2/3;
+        display: flex;
+        flex-direction: column;
+        // justify-content: center;
+        align-items: center;
+        margin: 2rem 0;
+      }
+      
+      .footer-col-2{
+        display: flex;
+        flex-direction: column;
+        // justify-content: center;
+        align-items: center;
+      }
     }
   }
 }
