--- a/blogs/style/article-1/article-1.scss
+++ b/blogs/style/article-1/article-1.scss
@@ -181,31 +181,66 @@ header {
   background: #f1f2f8;
   height: 30vh;
   .footer-inner {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 1rem 0;
+    
+    .footer-col-1{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+    }
+    
+    .footer-col-2{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+  
+  .footer-link{
+    color: $fourth-color;
+    text-decoration: none;
+    font-size: .9rem;
+  }
+  .footer-ul{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    margin: .5rem 0;
+    
+    .footer-li{
+      list-style-type: none;
+      margin-top: 1rem;
+    }
   }
-  .footer-h4 {
-    text-align: center;
-    // font-weight: 200;
-    color: #cdced3;
+  
+  .footer-align-container{
+    width: 70%;
+    margin: 1rem 0;
+    .footer-h4 {
+      text-align: justify;
+      // font-weight: 200;
+      color: #cdced3;
+    }
   }
+  
   .link-h5 {
     text-decoration: none;
     color: $main-color;
   }
-  
-  .social-media-ul{
+
+  .social-media-ul {
     display: flex;
     margin: 1rem 0;
   }
-  .social-media-li{
-      list-style-type: none;
-      margin: 0 .5rem;
+  .social-media-li {
+    list-style-type: none;
+    margin: 0 0.5rem;
   }
-  
-  .social-media-icon{
+
+  .social-media-icon {
     width: 1.4rem;
   }
 }
@@ -347,6 +382,33 @@ header {
     .header-p {
       color: #fff;
       text-shadow: 0px 0px 15px #000000;
+    }
+  }
+  
+  .footer {
+    background: #f1f2f8;
+    height: auto;
+    .footer-inner {
+      display: grid;
+      grid-template-columns: (1fr);
+      grid-auto-rows: auto;
+      padding: 1rem 0;
+      
+      .footer-col-1{
+        grid-row: 2/3;
+        display: flex;
+        flex-direction: column;
+        // justify-content: center;
+        align-items: center;
+        margin: 2rem 0;
+      }
+      
+      .footer-col-2{
+        display: flex;
+        flex-direction: column;
+        // justify-content: center;
+        align-items: center;
+      }
     }
   }
 }
