--- a/blogs/style/bangkok/bangkok.css
+++ b/blogs/style/bangkok/bangkok.css
@@ -305,6 +305,30 @@ header .header-p {
 }
 
 .footer .footer-inner {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  padding: 1rem 0;
+}
+
+.footer .footer-inner .footer-col-1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.footer .footer-inner .footer-col-2 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -320,8 +344,35 @@ header .header-p {
           align-items: center;
 }
 
-.footer .footer-h4 {
-  text-align: center;
+.footer .footer-link {
+  color: #02122C;
+  text-decoration: none;
+  font-size: 0.9rem;
+}
+
+.footer .footer-ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 0.5rem 0;
+}
+
+.footer .footer-ul .footer-li {
+  list-style-type: none;
+  margin-top: 1rem;
+}
+
+.footer .footer-align-container {
+  width: 70%;
+  margin: 1rem 0;
+}
+
+.footer .footer-align-container .footer-h4 {
+  text-align: justify;
   color: #cdced3;
 }
 
@@ -339,7 +390,7 @@ header .header-p {
 
 .footer .social-media-li {
   list-style-type: none;
-  margin: 0 .5rem;
+  margin: 0 0.5rem;
 }
 
 .footer .social-media-icon {
@@ -483,6 +534,46 @@ header .header-p {
   header .header-p {
     color: #fff;
     text-shadow: 0px 0px 15px #000000;
+  }
+  .footer {
+    background: #f1f2f8;
+    height: auto;
+  }
+  .footer .footer-inner {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    grid-auto-rows: auto;
+    padding: 1rem 0;
+  }
+  .footer .footer-inner .footer-col-1 {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin: 2rem 0;
+  }
+  .footer .footer-inner .footer-col-2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
