--- a/blogs/style/phuket/phuket.scss
+++ b/blogs/style/phuket/phuket.scss
@@ -199,16 +199,51 @@ header {
   background: #f1f2f8;
   height: 30vh;
   .footer-inner {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 1rem 0;
+
+    .footer-col-1 {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+    }
+
+    .footer-col-2 {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
+  .footer-link {
+    color: $fourth-color;
+    text-decoration: none;
+    font-size: 0.9rem;
+  }
+  .footer-ul {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    margin: 0.5rem 0;
+
+    .footer-li {
+      list-style-type: none;
+      margin-top: 1rem;
+    }
   }
-  .footer-h4 {
-    text-align: center;
-    // font-weight: 200;
-    color: #cdced3;
+
+  .footer-align-container {
+    width: 70%;
+    margin: 1rem 0;
+    .footer-h4 {
+      text-align: justify;
+      // font-weight: 200;
+      color: #cdced3;
+    }
   }
+
   .link-h5 {
     text-decoration: none;
     color: $main-color;
@@ -224,7 +259,7 @@ header {
   }
 
   .social-media-icon {
-    width: 2rem;
+    width: 1.4rem;
   }
 }
 
@@ -267,30 +302,29 @@ header {
   min-height: 10rem;
   padding: 1rem;
   margin-bottom: 1rem;
-  
+
   display: grid;
   grid-template-rows: 3.5rem auto;
-  
+
   background: #f1f2f8;
   position: relative;
-  
+
   .comment-container-upper {
     border-bottom: grey 1px solid;
     .comment-name {
       font-size: 1rem;
       font-weight: 700;
     }
-    
-    .comment-date{
-      font-size: .8rem;
+
+    .comment-date {
+      font-size: 0.8rem;
     }
   }
-  
-  .comment-container-lower{
+
+  .comment-container-lower {
     padding: 2rem 1rem;
-    
-    
-    .comment-reply-btn{
+
+    .comment-reply-btn {
       position: absolute;
       left: 0;
       bottom: 0;
@@ -298,12 +332,12 @@ header {
       height: 2rem;
       border: none;
       background: rgb(189, 188, 188);
-      
+
       font-size: 1rem;
-      color: #fff
+      color: #fff;
     }
-    
-    .comment-show-reply-btn{
+
+    .comment-show-reply-btn {
       position: absolute;
       left: 10rem;
       bottom: 0;
@@ -311,7 +345,7 @@ header {
       height: 2rem;
       border: none;
       background: rgb(219, 218, 218);
-      
+
       font-size: 1rem;
       color: #fff;
       outline: none;
@@ -319,8 +353,8 @@ header {
   }
 }
 
-.comment-replies-ul{
-  .comment-replies-li{
+.comment-replies-ul {
+  .comment-replies-li {
     list-style-type: none;
     margin-left: 5rem;
   }
@@ -454,6 +488,33 @@ header {
     .header-p {
       color: #fff;
       text-shadow: 0px 0px 15px #000000;
+    }
+  }
+
+  .footer {
+    background: #f1f2f8;
+    height: auto;
+    .footer-inner {
+      display: grid;
+      grid-template-columns: (1fr);
+      grid-auto-rows: auto;
+      padding: 1rem 0;
+
+      .footer-col-1 {
+        grid-row: 2/3;
+        display: flex;
+        flex-direction: column;
+        // justify-content: center;
+        align-items: center;
+        margin: 2rem 0;
+      }
+
+      .footer-col-2 {
+        display: flex;
+        flex-direction: column;
+        // justify-content: center;
+        align-items: center;
+      }
     }
   }
 }
