--- a/blogs/style/thailand/thailand.scss
+++ b/blogs/style/thailand/thailand.scss
@@ -215,16 +215,51 @@ header {
   background: #f1f2f8;
   height: 30vh;
   .footer-inner {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 1rem 0;
+
+    .footer-col-1 {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+    }
+
+    .footer-col-2 {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
+  .footer-link {
+    color: $fourth-color;
+    text-decoration: none;
+    font-size: 0.9rem;
+  }
+  .footer-ul {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    margin: 0.5rem 0;
+
+    .footer-li {
+      list-style-type: none;
+      margin-top: 1rem;
+    }
   }
-  .footer-h4 {
-    text-align: center;
-    // font-weight: 200;
-    color: #cdced3;
+
+  .footer-align-container {
+    width: 70%;
+    margin: 1rem 0;
+    .footer-h4 {
+      text-align: justify;
+      // font-weight: 200;
+      color: #cdced3;
+    }
   }
+
   .link-h5 {
     text-decoration: none;
     color: $main-color;
@@ -378,6 +413,32 @@ header {
     .header-p {
       color: #fff;
       text-shadow: 0px 0px 15px #000000;
+    }
+  }
+  .footer {
+    background: #f1f2f8;
+    height: auto;
+    .footer-inner {
+      display: grid;
+      grid-template-columns: (1fr);
+      grid-auto-rows: auto;
+      padding: 1rem 0;
+
+      .footer-col-1 {
+        grid-row: 2/3;
+        display: flex;
+        flex-direction: column;
+        // justify-content: center;
+        align-items: center;
+        margin: 2rem 0;
+      }
+
+      .footer-col-2 {
+        display: flex;
+        flex-direction: column;
+        // justify-content: center;
+        align-items: center;
+      }
     }
   }
 }
