--- a/styles/index.style.css
+++ b/styles/index.style.css
@@ -107,7 +107,7 @@
   height: 6.8rem;
   position: absolute;
   top: 0;
-  z-index: 4;
+  z-index: 999999;
 }
 
 .phone-nav {
@@ -574,6 +574,9 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
@@ -587,6 +590,9 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1416,7 +1422,7 @@
     background: #02122C;
     padding: 0 1rem;
     top: 0;
-    z-index: 99999;
+    z-index: 9999999;
   }
   .phone-nav .logo-phone {
     width: 8rem;
