--- a/styles/index.style.scss
+++ b/styles/index.style.scss
@@ -91,7 +91,7 @@
   height: 6.8rem;
   position: absolute;
   top: 0;
-  z-index: 4;
+  z-index: 999999;
 }
 .phone-nav {
   display: none;
@@ -113,7 +113,6 @@
 }
 
 .inner-header-row-1 {
-  // border: 1px solid yellow;
   width: 100%;
   height: 100%;
   display: flex;
@@ -453,14 +452,14 @@
     .footer-col-1{
       display: flex;
       flex-direction: column;
-      // justify-content: center;
+      justify-content: center;
       align-items: flex-start;
     }
     
     .footer-col-2{
       display: flex;
       flex-direction: column;
-      // justify-content: center;
+      justify-content: center;
       align-items: center;
     }
   }
@@ -1165,7 +1164,7 @@
     background: $fourth-color;
     padding: 0 1rem;
     top: 0;
-    z-index: 99999;
+    z-index: 9999999;
 
     .logo-phone {
       width: 8rem;
