--- a/styles/tours-page/tours-page.module.css
+++ b/styles/tours-page/tours-page.module.css
@@ -407,6 +407,30 @@
 }
 
 .footer .footer-inner {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  padding: 1rem 0;
+}
+
+.footer .footer-inner .footer-col-1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.footer .footer-inner .footer-col-2 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -422,8 +446,35 @@
           align-items: center;
 }
 
-.footer .footer-h4 {
-  text-align: center;
+.footer .footer-link {
+  color: #02122C;
+  text-decoration: none;
+  font-size: 0.9rem;
+}
+
+.footer .footer-ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 0.5rem 0;
+}
+
+.footer .footer-ul .footer-li {
+  list-style-type: none;
+  margin-top: 1rem;
+}
+
+.footer .footer-align-container {
+  width: 70%;
+  margin: 1rem 0;
+}
+
+.footer .footer-align-container .footer-h4 {
+  text-align: justify;
   color: #cdced3;
 }
 
@@ -852,6 +903,46 @@
     font-size: 2rem;
     font-weight: 1000;
     display: none;
+  }
+  .footer {
+    background: #f1f2f8;
+    height: auto;
+  }
+  .footer .footer-inner {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    grid-auto-rows: auto;
+    padding: 1rem 0;
+  }
+  .footer .footer-inner .footer-col-1 {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin: 2rem 0;
+  }
+  .footer .footer-inner .footer-col-2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
