--- a/blogs/style/article-1/article-1.css
+++ b/blogs/style/article-1/article-1.css
@@ -201,7 +201,7 @@ header .header-p {
 
 .footer {
   background: #f1f2f8;
-  height: 30vh;
+  height: auto;
 }
 
 .footer .footer-inner {
@@ -209,7 +209,7 @@ header .header-p {
   display: grid;
   -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
-  padding: 1rem 0;
+  padding: 2rem 0;
 }
 
 .footer .footer-inner .footer-col-1 {
@@ -220,9 +220,6 @@ header .header-p {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
@@ -236,9 +233,6 @@ header .header-p {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -274,6 +268,10 @@ header .header-p {
 .footer .footer-align-container .footer-h4 {
   text-align: justify;
   color: #cdced3;
+}
+
+.footer .footer-h2 {
+  font-size: 1rem;
 }
 
 .footer .link-h5 {
