--- a/blogs/style/bangkok/bangkok.scss
+++ b/blogs/style/bangkok/bangkok.scss
@@ -249,44 +249,44 @@ header {
 
 .footer {
   background: #f1f2f8;
-  height: 30vh;
+  height: auto;
   .footer-inner {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    padding: 1rem 0;
-
-    .footer-col-1 {
+    padding: 2rem 0;
+    
+    .footer-col-1{
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      // justify-content: center;
       align-items: flex-start;
     }
-
-    .footer-col-2 {
+    
+    .footer-col-2{
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      // justify-content: center;
       align-items: center;
     }
   }
-
-  .footer-link {
+  
+  .footer-link{
     color: $fourth-color;
     text-decoration: none;
-    font-size: 0.9rem;
+    font-size: .9rem;
   }
-  .footer-ul {
+  .footer-ul{
     display: flex;
     flex-direction: column;
-    margin: 0.5rem 0;
-
-    .footer-li {
+    margin: .5rem 0;
+    
+    .footer-li{
       list-style-type: none;
       margin-top: 1rem;
     }
   }
-
-  .footer-align-container {
+  
+  .footer-align-container{
     width: 70%;
     margin: 1rem 0;
     .footer-h4 {
@@ -295,7 +295,10 @@ header {
       color: #cdced3;
     }
   }
-
+  .footer-h2{
+    font-size: 1rem;
+  }
+  
   .link-h5 {
     text-decoration: none;
     color: $main-color;
