--- a/styles/tours-page/tours-page.module.css
+++ b/styles/tours-page/tours-page.module.css
@@ -403,7 +403,7 @@
 
 .footer {
   background: #f1f2f8;
-  height: 30vh;
+  height: auto;
 }
 
 .footer .footer-inner {
@@ -411,7 +411,7 @@
   display: grid;
   -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
-  padding: 1rem 0;
+  padding: 2rem 0;
 }
 
 .footer .footer-inner .footer-col-1 {
@@ -422,9 +422,6 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
@@ -438,9 +435,6 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -449,7 +443,7 @@
 .footer .footer-link {
   color: #02122C;
   text-decoration: none;
-  font-size: 0.9rem;
+  font-size: .9rem;
 }
 
 .footer .footer-ul {
@@ -460,7 +454,7 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin: 0.5rem 0;
+  margin: .5rem 0;
 }
 
 .footer .footer-ul .footer-li {
@@ -476,6 +470,10 @@
 .footer .footer-align-container .footer-h4 {
   text-align: justify;
   color: #cdced3;
+}
+
+.footer .footer-h2 {
+  font-size: 1rem;
 }
 
 .footer .link-h5 {
