--- a/styles/index.style.scss
+++ b/styles/index.style.scss
@@ -484,7 +484,7 @@
     width: 70%;
     margin: 1rem 0;
     .footer-h4 {
-      text-align: justify;
+      text-align: center;
       // font-weight: 200;
       color: #cdced3;
     }
