--- a/blogs/style/article-1/article-1.scss
+++ b/blogs/style/article-1/article-1.scss
@@ -17,6 +17,9 @@
 .inner {
   width: 50%;
 }
+.footer-inner{
+  width: 60vw;
+}
 .wrapper {
   text-align: justify;
 }
@@ -220,7 +223,7 @@ header {
     width: 70%;
     margin: 1rem 0;
     .footer-h4 {
-      text-align: justify;
+      text-align: center;
       // font-weight: 200;
       color: #cdced3;
     }
