--- a/styles/blog-page/blog.style.css
+++ b/styles/blog-page/blog.style.css
@@ -328,7 +328,7 @@ header .header-p {
 }
 
 .footer .footer-align-container .footer-h4 {
-  text-align: justify;
+  text-align: center;
   color: #cdced3;
 }
 
