--- a/styles/blog-page/blog.style.scss
+++ b/styles/blog-page/blog.style.scss
@@ -280,7 +280,7 @@ header {
     width: 70%;
     margin: 1rem 0;
     .footer-h4 {
-      text-align: justify;
+      text-align: center;
       // font-weight: 200;
       color: #cdced3;
     }
