--- a/blogs/style/article-1/article-1.css
+++ b/blogs/style/article-1/article-1.css
@@ -20,6 +20,10 @@
   width: 50%;
 }
 
+.footer-inner {
+  width: 60vw;
+}
+
 .wrapper {
   text-align: justify;
 }
@@ -266,7 +270,7 @@ header .header-p {
 }
 
 .footer .footer-align-container .footer-h4 {
-  text-align: justify;
+  text-align: center;
   color: #cdced3;
 }
 
