--- a/blogs/style/bangkok/bangkok.css
+++ b/blogs/style/bangkok/bangkok.css
@@ -20,6 +20,10 @@
   width: 50%;
 }
 
+.footer-inner {
+  width: 60vw;
+}
+
 .justify-wrapper {
   text-align: justify;
 }
@@ -366,7 +370,7 @@ header .header-p {
 }
 
 .footer .footer-align-container .footer-h4 {
-  text-align: justify;
+  text-align: center;
   color: #cdced3;
 }
 
