--- a/blogs/style/thailand/thailand.css
+++ b/blogs/style/thailand/thailand.css
@@ -20,6 +20,10 @@
   width: 50%;
 }
 
+.footer-inner {
+  width: 60vw;
+}
+
 .wrapper {
   text-align: justify;
   display: -webkit-box;
@@ -334,7 +338,7 @@ header .header-p {
 }
 
 .footer .footer-align-container .footer-h4 {
-  text-align: justify;
+  text-align: center;
   color: #cdced3;
 }
 
