--- a/blogs/style/thailand/thailand.scss
+++ b/blogs/style/thailand/thailand.scss
@@ -18,6 +18,10 @@
   width: 50%;
 }
 
+.footer-inner{
+  width: 60vw;
+}
+
 .wrapper {
   text-align: justify;
   display: flex;
@@ -254,7 +258,7 @@ header {
     width: 70%;
     margin: 1rem 0;
     .footer-h4 {
-      text-align: justify;
+      text-align: center;
       // font-weight: 200;
       color: #cdced3;
     }
