--- a/styles/index.style.scss
+++ b/styles/index.style.scss
@@ -869,7 +869,7 @@
     top: 11.18rem;
     left: -12.8rem;
     // border: 1px solid red;;
-
+// s
     cursor: pointer;
 
     align-items: center;
