--- a/styles/index.style.scss
+++ b/styles/index.style.scss
@@ -919,7 +919,7 @@
     .mewtwo-widget {
       margin-top: 8rem !important;
       z-index: 8888 !important;
-      width: 100% !important;
+      // width: 100% !important;
     }
   }
 }
