--- a/blogs/style/phuket/phuket.css
+++ b/blogs/style/phuket/phuket.css
@@ -5,6 +5,7 @@
           box-sizing: border-box;
   font-family: "Poppins", sans-serif;
   text-rendering: optimizeLegibility;
+  scroll-behavior: smooth;
 }
 
 .center {
@@ -346,6 +347,10 @@ header .header-p {
   width: 1.4rem;
 }
 
+.replyInputContainer {
+  margin-left: 5rem;
+}
+
 .comment-form {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -362,10 +367,10 @@ header .header-p {
 
 .comment-form .comment-label {
   color: #000;
+  margin-bottom: 1rem;
 }
 
 .comment-form #comment-input-form {
-  margin-top: 1rem;
   border: none;
   outline: none;
 }
@@ -396,8 +401,8 @@ header .header-p {
   margin-bottom: 1rem;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 3.5rem auto;
-      grid-template-rows: 3.5rem auto;
+  -ms-grid-rows: 3.5rem auto auto;
+      grid-template-rows: 3.5rem auto auto;
   background: #f1f2f8;
   position: relative;
 }
@@ -416,7 +421,7 @@ header .header-p {
 }
 
 .comment-container .comment-container-lower {
-  padding: 2rem 1rem;
+  padding: 1rem 1rem 2rem  1rem;
 }
 
 .comment-container .comment-container-lower .comment-reply-btn {
@@ -447,6 +452,34 @@ header .header-p {
 .comment-replies-ul .comment-replies-li {
   list-style-type: none;
   margin-left: 5rem;
+}
+
+.comment-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 1rem;
+}
+
+.comment-input-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.comment-input {
+  border: none;
+}
+
+.comment-input-name {
+  margin-right: 2rem;
 }
 
 @media only screen and (min-width: 1800px) {
@@ -659,6 +692,19 @@ header .header-p {
   }
   .section-1 .section-1-li-styled {
     text-align: justify;
+  }
+  .comment-row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-bottom: 1rem;
+  }
+  .comment-input-name {
+    margin-right: 0;
   }
 }
 
