--- a/blogs/style/phuket/phuket.css
+++ b/blogs/style/phuket/phuket.css
@@ -347,8 +347,14 @@ header .header-p {
   width: 1.4rem;
 }
 
+.comment-section-h4 {
+  margin-bottom: -4rem;
+}
+
 .replyInputContainer {
   margin-left: 5rem;
+  -webkit-animation: 300ms opacityIn forwards linear;
+          animation: 300ms opacityIn forwards linear;
 }
 
 .comment-form {
@@ -370,7 +376,8 @@ header .header-p {
   margin-bottom: 1rem;
 }
 
-.comment-form #comment-input-form {
+.comment-form #comment-input-form,
+.comment-form #reply-input-comment {
   border: none;
   outline: none;
 }
@@ -394,7 +401,8 @@ header .header-p {
   color: #fff;
 }
 
-.comment-container {
+.comment-container,
+.reply-container {
   width: 100%;
   min-height: 10rem;
   padding: 1rem;
@@ -407,24 +415,29 @@ header .header-p {
   position: relative;
 }
 
-.comment-container .comment-container-upper {
+.comment-container .comment-container-upper,
+.reply-container .comment-container-upper {
   border-bottom: grey 1px solid;
 }
 
-.comment-container .comment-container-upper .comment-name {
+.comment-container .comment-container-upper .comment-name,
+.reply-container .comment-container-upper .comment-name {
   font-size: 1rem;
   font-weight: 700;
 }
 
-.comment-container .comment-container-upper .comment-date {
+.comment-container .comment-container-upper .comment-date,
+.reply-container .comment-container-upper .comment-date {
   font-size: 0.8rem;
 }
 
-.comment-container .comment-container-lower {
+.comment-container .comment-container-lower,
+.reply-container .comment-container-lower {
   padding: 1rem 1rem 2rem  1rem;
 }
 
-.comment-container .comment-container-lower .comment-reply-btn {
+.comment-container .comment-container-lower .comment-reply-btn,
+.reply-container .comment-container-lower .comment-reply-btn {
   position: absolute;
   left: 0;
   bottom: 0;
@@ -436,7 +449,8 @@ header .header-p {
   color: #fff;
 }
 
-.comment-container .comment-container-lower .comment-show-reply-btn {
+.comment-container .comment-container-lower .comment-show-reply-btn,
+.reply-container .comment-container-lower .comment-show-reply-btn {
   position: absolute;
   left: 10rem;
   bottom: 0;
@@ -447,6 +461,15 @@ header .header-p {
   font-size: 1rem;
   color: #fff;
   outline: none;
+}
+
+.comment-container {
+  margin-top: 5rem;
+}
+
+.reply-container {
+  margin-left: 5rem;
+  width: calc( 100% - 5rem);
 }
 
 .comment-replies-ul .comment-replies-li {
@@ -727,6 +750,24 @@ header .header-p {
   100% {
     -webkit-transform: translateY(0);
             transform: translateY(0);
+  }
+}
+
+@-webkit-keyframes opacityIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 100%;
+  }
+}
+
+@keyframes opacityIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 100%;
   }
 }
 /*# sourceMappingURL=phuket.css.map */
