changed homepage banner

--- a/styles/sitemap/sitemap.css
+++ b/styles/sitemap/sitemap.css
@@ -212,6 +212,7 @@ header .header-p {
 }
 
 .footer .footer-inner {
+  width: 85vw;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[3];
