--- a/styles/index.style.css
+++ b/styles/index.style.css
@@ -49,7 +49,7 @@
   color: #fff;
   position: relative;
   top: 11.19rem;
-  left: -10.2rem;
+  left: -10.19rem;
   cursor: pointer;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -192,7 +192,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background: url(../assets/images/section-1-bg.jpg) no-repeat center;
+  background: url(../assets/images/header.jpg) no-repeat center;
   background-size: cover;
   background-attachment: fixed;
 }
@@ -745,8 +745,8 @@
     border: none;
     color: #fff;
     position: relative;
-    top: 11.15rem;
-    left: -12.1rem;
+    top: 11.19rem;
+    left: -11.75rem;
     cursor: pointer;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -842,7 +842,6 @@
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    background: url(../assets/images/section-1-bg.jpg) no-repeat center;
     background-attachment: fixed;
     background-size: cover;
   }
@@ -1054,7 +1053,7 @@
     color: #fff;
     position: relative;
     top: 11.18rem;
-    left: -12.8rem;
+    left: -9.8rem;
     cursor: pointer;
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -1085,7 +1084,6 @@
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    background: url(../assets/images/section-1-bg.jpg) no-repeat center;
     background-size: cover;
   }
   .section-1 .banner-h1 {
