--- a/styles/index.style.scss
+++ b/styles/index.style.scss
@@ -48,7 +48,7 @@
   position: relative;
   top: 11.19rem;
   // top: 12.19rem;
-  left: -10.2rem;
+  left: -10.19rem;
   // border: 1px solid red;;
 
   cursor: pointer;
@@ -148,7 +148,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: url(../assets/images/section-1-bg.jpg) no-repeat center;
+  // background: url(../assets/images/section-1-bg.jpg) no-repeat center;
+  background: url(../assets/images/header.jpg) no-repeat center;
   background-size: cover;
   background-attachment: fixed;
 
@@ -591,8 +592,8 @@
     border: none;
     color: #fff;
     position: relative;
-    top: 11.15rem;
-    left: -12.1rem;
+    top: 11.19rem;
+    left: -11.75rem;
     // border: 1px solid red;;
 
     cursor: pointer;
@@ -672,7 +673,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: url(../assets/images/section-1-bg.jpg) no-repeat center;
+    // background: url(../assets/images/section-1-bg.jpg) no-repeat center;
     background-attachment: fixed;
     background-size: cover;
     // overflow: hidden;
@@ -867,7 +868,7 @@
     color: #fff;
     position: relative;
     top: 11.18rem;
-    left: -12.8rem;
+    left: -9.8rem;
     // border: 1px solid red;;
 // s
     cursor: pointer;
@@ -890,7 +891,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: url(../assets/images/section-1-bg.jpg) no-repeat center;
+    // background: url(../assets/images/section-1-bg.jpg) no-repeat center;
     background-size: cover;
 
     .banner-h1 {
