--- a/blogs/style/phuket/phuket.scss
+++ b/blogs/style/phuket/phuket.scss
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
   text-rendering: optimizeLegibility;
-  scroll-behavior: auto;
+  scroll-behavior: smooth;
 }
 // COMMON CLASSES
 // =============================================================================================
@@ -274,8 +274,14 @@ header {
 
 
 // COMMENTS STYLES ======================
+
+// FOR COMMENT SECTION LABEL (Makes it closer to actual comment section)
 .comment-section-h4{
   margin-bottom: -4rem;
+}
+
+.replied-to-name{
+  color: $main-color;
 }
 
 //FOR THE REPLY INPUT FORM INDENT
