--- a/blogs/style/phuket/phuket.css
+++ b/blogs/style/phuket/phuket.css
@@ -742,6 +742,10 @@ header .header-p {
   }
 }
 
+.replyInputContainer {
+  margin-left: 0;
+}
+
 @-webkit-keyframes menuIn {
   0% {
     -webkit-transform: translateY(-100vh);
