--- a/styles/blog-page/blog.style.css
+++ b/styles/blog-page/blog.style.css
@@ -37,7 +37,7 @@ body {
 
 .blog-preview-container {
   width: 100%;
-  height: 400px;
+  height: 500px;
   padding: 1rem;
   background: #fff;
   -webkit-box-shadow: 2px 2px 15px -7px rgba(0, 0, 0, 0.75);
@@ -45,7 +45,7 @@ body {
 }
 
 .blog-preview-container .blog-title-container {
-  height: 20%;
+  height: 10%;
 }
 
 .spacer-vertical-1rem,
@@ -83,7 +83,7 @@ body {
 
 .img-wrapper-large {
   width: 100%;
-  height: 130px;
+  height: 230px;
   overflow: hidden;
 }
 
@@ -307,7 +307,7 @@ header .header-p {
 .footer .footer-link {
   color: #02122C;
   text-decoration: none;
-  font-size: .9rem;
+  font-size: 0.9rem;
 }
 
 .footer .footer-ul {
@@ -318,7 +318,7 @@ header .header-p {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin: .5rem 0;
+  margin: 0.5rem 0;
 }
 
 .footer .footer-ul .footer-li {
@@ -368,6 +368,17 @@ header .header-p {
        object-fit: none;
     -o-object-position: 100% 100%;
        object-position: 100% 100%;
+  }
+  .img-wrapper-large {
+    width: 100%;
+    height: 130px;
+    overflow: hidden;
+  }
+  .blog-preview-container {
+    height: 400px;
+  }
+  .blog-preview-container .blog-title-container {
+    height: 20%;
   }
 }
 
