--- a/blogs/style/bangkok/bangkok.css
+++ b/blogs/style/bangkok/bangkok.css
@@ -779,6 +779,9 @@ header .header-p {
   .section-1 .section-1-li-styled {
     text-align: justify;
   }
+  .replyInputContainer {
+    margin-left: 0;
+  }
 }
 
 @-webkit-keyframes menuIn {
@@ -818,6 +821,52 @@ header .header-p {
   }
   100% {
     opacity: 1;
+  }
+}
+
+.lds-dual-ring {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid #080725;
+  border-color: #080725 transparent #080725 transparent;
+  -webkit-animation: lds-dual-ring 1.2s linear infinite;
+          animation: lds-dual-ring 1.2s linear infinite;
+}
+
+@-webkit-keyframes lds-dual-ring {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes lds-dual-ring {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
   }
 }
 /*# sourceMappingURL=bangkok.css.map */
