--- a/blogs/style/phuket/phuket.scss
+++ b/blogs/style/phuket/phuket.scss
@@ -19,7 +19,7 @@
   width: 50%;
 }
 
-.footer-inner{
+.footer-inner {
   width: 85vw;
 }
 
@@ -67,7 +67,6 @@
 }
 
 // ------------------------------------------------------------------------------------------
-
 
 header {
   width: 100%;
@@ -208,39 +207,39 @@ header {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     padding: 2rem 0;
-    
-    .footer-col-1{
+
+    .footer-col-1 {
       display: flex;
       flex-direction: column;
       // justify-content: center;
       align-items: flex-start;
     }
-    
-    .footer-col-2{
+
+    .footer-col-2 {
       display: flex;
       flex-direction: column;
       // justify-content: center;
       align-items: center;
     }
   }
-  
-  .footer-link{
+
+  .footer-link {
     color: $fourth-color;
     text-decoration: none;
-    font-size: .9rem;
+    font-size: 0.9rem;
   }
-  .footer-ul{
+  .footer-ul {
     display: flex;
     flex-direction: column;
-    margin: .5rem 0;
-    
-    .footer-li{
+    margin: 0.5rem 0;
+
+    .footer-li {
       list-style-type: none;
       margin-top: 1rem;
     }
   }
-  
-  .footer-align-container{
+
+  .footer-align-container {
     width: 70%;
     margin: 1rem 0;
     .footer-h4 {
@@ -249,10 +248,10 @@ header {
       color: #cdced3;
     }
   }
-  .footer-h2{
+  .footer-h2 {
     font-size: 1rem;
   }
-  
+
   .link-h5 {
     text-decoration: none;
     color: $main-color;
@@ -272,25 +271,24 @@ header {
   }
 }
 
-
 // COMMENTS STYLES ======================
 
 // FOR COMMENT SECTION LABEL (Makes it closer to actual comment section)
-.comment-section-h4{
+.comment-section-h4 {
   margin-bottom: -4rem;
 }
 
-.replied-to-name{
+.replied-to-name {
   color: $main-color;
 }
 
 //FOR THE REPLY INPUT FORM INDENT
-.replyInputContainer{
+.replyInputContainer {
   margin-left: 5rem;
   animation: 300ms opacityIn forwards linear;
 }
 
-.comment-section-inner{
+.comment-section-inner {
   // width: 100%;
   min-height: 50vh;
   position: relative;
@@ -309,12 +307,10 @@ header {
   }
 
   #comment-input-form,
-  #reply-input-comment{
+  #reply-input-comment {
     border: none;
     outline: none;
   }
-  
-  
 
   .comment-btn-container {
     width: 100%;
@@ -333,7 +329,7 @@ header {
 }
 
 .comment-container,
-.reply-container{
+.reply-container {
   width: 100%;
   min-height: 10rem;
   padding: 1rem;
@@ -359,7 +355,7 @@ header {
   }
 
   .comment-container-lower {
-    padding: 1rem 1rem 2rem  1rem;
+    padding: 1rem 1rem 2rem 1rem;
 
     .comment-reply-btn {
       position: absolute;
@@ -390,12 +386,12 @@ header {
   }
 }
 
-.comment-container{
+.comment-container {
   margin-top: 5rem;
 }
-.reply-container{
+.reply-container {
   margin-left: 5rem;
-  width: calc( 100% - 5rem)
+  width: calc(100% - 5rem);
 }
 
 .comment-replies-ul {
@@ -405,28 +401,25 @@ header {
   }
 }
 
-
-.comment-row{
+.comment-row {
   display: flex;
   margin-bottom: 1rem;
 }
 
-.comment-input-container{
+.comment-input-container {
   display: flex;
   flex-direction: column;
   flex: 1;
 }
 
-.comment-input{
+.comment-input {
   border: none;
 }
 
-.comment-input-name{
+.comment-input-name {
   margin-right: 2rem;
 }
 // END OF COMMENT STYLES ========================================
-
-
 
 @media only screen and (min-width: 1800px) {
   .section-1 {
@@ -626,18 +619,18 @@ header {
       text-align: justify;
     }
   }
-  .comment-row{
+  .comment-row {
     display: flex;
     flex-direction: column;
     margin-bottom: 1rem;
   }
-  .comment-input-name{
+  .comment-input-name {
     margin-right: 0;
   }
-}
 
-.replyInputContainer{
-  margin-left: 0;
+  .replyInputContainer {
+    margin-left: 0;
+  }
 }
 
 @keyframes menuIn {
@@ -653,7 +646,7 @@ header {
   0% {
     opacity: 0;
   }
-  100%{
+  100% {
     opacity: 100%;
   }
 }
@@ -679,7 +672,6 @@ header {
   border: 6px solid rgb(8, 7, 37);
   border-color: rgb(8, 7, 37) transparent rgb(8, 7, 37) transparent;
   animation: lds-dual-ring 1.2s linear infinite;
-  
 }
 @keyframes lds-dual-ring {
   0% {
@@ -689,6 +681,5 @@ header {
     transform: rotate(360deg);
   }
 }
-
 
 // LOADING CSS
