--- a/blogs/style/article-1/article-1.scss
+++ b/blogs/style/article-1/article-1.scss
@@ -265,6 +265,11 @@ header {
 }
 
 // COMMENTS STYLES ======================
+.comment-section{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 // FOR COMMENT SECTION LABEL (Makes it closer to actual comment section)
 .comment-section-h4{
@@ -283,7 +288,7 @@ header {
 
 .comment-section-inner{
   // width: 100%;
-  min-height: 50vh;
+  min-height: 20vh;
   position: relative;
 }
 .comment-form {
