--- a/blogs/style/bali/bali.scss
+++ b/blogs/style/bali/bali.scss
@@ -275,6 +275,11 @@ header {
 
 // COMMENTS STYLES ======================
 
+.comment-section{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 // FOR COMMENT SECTION LABEL (Makes it closer to actual comment section)
 .comment-section-h4{
   margin-bottom: -4rem;
@@ -292,7 +297,7 @@ header {
 
 .comment-section-inner{
   // width: 100%;
-  min-height: 30vh;
+  min-height: 20vh;
   position: relative;
 }
 .comment-form {
