--- a/blogs/style/bangkok/bangkok.css
+++ b/blogs/style/bangkok/bangkok.css
@@ -399,6 +399,19 @@ header .header-p {
   width: 1.4rem;
 }
 
+.comment-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .comment-section-h4 {
   margin-bottom: -4rem;
 }
@@ -414,7 +427,7 @@ header .header-p {
 }
 
 .comment-section-inner {
-  min-height: 50vh;
+  min-height: 20vh;
   position: relative;
 }
 
