--- a/blogs/style/phuket/phuket.scss
+++ b/blogs/style/phuket/phuket.scss
@@ -273,6 +273,12 @@ header {
 
 // COMMENTS STYLES ======================
 
+.comment-section{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 // FOR COMMENT SECTION LABEL (Makes it closer to actual comment section)
 .comment-section-h4 {
   margin-bottom: -4rem;
@@ -290,7 +296,7 @@ header {
 
 .comment-section-inner {
   // width: 100%;
-  min-height: 50vh;
+  min-height: 20vh;
   position: relative;
 }
 .comment-form {
