--- a/styles/blog-page/blog.style.scss
+++ b/styles/blog-page/blog.style.scss
@@ -331,11 +331,18 @@ header {
       height: 20%;
     }
   }
+  .footer-inner {
+    width: 85vw;
+  }
 }
 
 @media only screen and (max-width: 1280px) {
   //COMMON CLASSES ==================================================================================================================
 
+  .footer-inner {
+    width: 85vw;
+  }
+  
   .inner {
     width: 70%;
   }
