--- a/styles/blog-page/blog.style.css
+++ b/styles/blog-page/blog.style.css
@@ -380,9 +380,15 @@ header .header-p {
   .blog-preview-container .blog-title-container {
     height: 20%;
   }
+  .footer-inner {
+    width: 85vw;
+  }
 }
 
 @media only screen and (max-width: 1280px) {
+  .footer-inner {
+    width: 85vw;
+  }
   .inner {
     width: 70%;
   }
