--- a/styles/index.style.css
+++ b/styles/index.style.css
@@ -238,7 +238,7 @@
 }
 
 .section-2 .section-2-upper {
-  margin: 2rem 0;
+  margin: 4rem 0;
   padding: 0 8rem;
 }
 
@@ -259,9 +259,9 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   padding: 0 6rem 0 0;
 }
 
