--- a/blogs/style/phuketBeach/phuketBeach.css
+++ b/blogs/style/phuketBeach/phuketBeach.css
@@ -737,6 +737,7 @@ header .header-p {
     font-size: 1.7rem;
   }
   .section-1 .section-1-p {
+    margin-top: 1rem;
     text-align: justify;
   }
   .section-1 .section-1-img-small-wrapper {
