--- a/blogs/style/phuketBeach/phuketBeach.scss
+++ b/blogs/style/phuketBeach/phuketBeach.scss
@@ -625,6 +625,7 @@ header {
     }
 
     .section-1-p {
+        margin-top: 1rem;
       text-align: justify;
     }
     .section-1-img-small-wrapper {
