--- a/blogs/style/phuketBeach/phuketBeach.css
+++ b/blogs/style/phuketBeach/phuketBeach.css
@@ -45,6 +45,10 @@
   margin-top: 1rem;
 }
 
+.section-1-p {
+  margin-top: 1rem;
+}
+
 .section-1-cont-2-col {
   width: 100%;
   display: -ms-grid;
@@ -737,7 +741,6 @@ header .header-p {
     font-size: 1.7rem;
   }
   .section-1 .section-1-p {
-    margin-top: 1rem;
     text-align: justify;
   }
   .section-1 .section-1-img-small-wrapper {
