--- a/blogs/style/phuketBeach/phuketBeach.scss
+++ b/blogs/style/phuketBeach/phuketBeach.scss
@@ -42,7 +42,9 @@
   font-size: 1.2rem;
   margin-top: 1rem;
 }
-
+.section-1-p{
+    margin-top: 1rem;
+}
 //Column-container ------------------------------------------
 .section-1-cont-2-col {
   width: 100%;
@@ -625,7 +627,7 @@ header {
     }
 
     .section-1-p {
-        margin-top: 1rem;
+       
       text-align: justify;
     }
     .section-1-img-small-wrapper {
