added pattaya blog

--- a/blogs/style/pattaya/pattaya.scss
+++ b/blogs/style/pattaya/pattaya.scss
@@ -121,10 +121,10 @@ header {
     z-index: 2;
   }
 
-  .site-nav-solid {
-    background: #000;
-    animation: 1000ms opacityIn linear forwards;
-  }
+//   .site-nav-solid {
+//     background: #000;
+//     animation: 1000ms opacityIn linear forwards;
+//   }
 
   .site-nav-inner {
     width: 85vw;
