--- a/styles/personal-data/personal-data.css
+++ b/styles/personal-data/personal-data.css
@@ -105,26 +105,35 @@ body {
           transform: scale(1.1);
 }
 
+.h1 {
+  font-size: 1.3rem;
+  font-weight: 700;
+  margin: 2rem 0;
+}
+
 .h2 {
   font-size: 1.2rem;
   font-weight: 700;
+  margin: 2rem 0;
 }
 
 .h3 {
   font-size: 1.1rem;
   font-weight: 600;
+  margin: 2rem 0;
 }
 
 .p {
-  margin-top: 1rem;
-  font-size: 0.8rem;
+  margin: 2rem 0;
+  font-size: 1rem;
   line-height: 1.5rem;
   color: grey;
+  text-align: justify;
 }
 
-.link {
+.text-link {
   text-decoration: none;
-  color: #02122C;
+  color: #0770E7;
 }
 
 .phone-menu {
@@ -223,36 +232,29 @@ header .header-p {
 }
 
 .section-1 {
-  margin: 5rem 0;
+  min-height: 100vh;
+  height: 100%;
+  width: 100%;
 }
 
-.section-1 .section-1-ul {
+.end-button-wrapper {
+  width: 100%;
+  height: 5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 1rem 0;
-  color: #6d6d6d;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.section-1 .section-1-li {
-  font-size: 0.8rem;
-  list-style-type: none;
-}
-
-.section-1 span {
-  margin: 0 0.5rem;
-}
-
-.section-1 .blog-list-ul {
-  list-style-position: inside;
-}
-
-.section-1 .blog-list-li {
-  margin-bottom: 1.5rem;
-}
-
-.section-1 .blog-list-li .link {
-  color: grey;
+.end-button-wrapper .end-button {
+  width: 9rem;
+  height: 3rem;
+  border: none;
+  color: white;
+  background: #0770E7;
+  font-size: 1rem;
 }
 
 .footer {
@@ -349,30 +351,6 @@ header .header-p {
 
 .footer .social-media-icon {
   width: 1.4rem;
-}
-
-@media only screen and (max-width: 1366px) {
-  .img-large {
-    width: 100%;
-    -o-object-fit: none;
-       object-fit: none;
-    -o-object-position: 100% 100%;
-       object-position: 100% 100%;
-  }
-  .img-wrapper-large {
-    width: 100%;
-    height: 130px;
-    overflow: hidden;
-  }
-  .blog-preview-container {
-    height: 400px;
-  }
-  .blog-preview-container .blog-title-container {
-    height: 20%;
-  }
-  .footer-inner {
-    width: 85vw;
-  }
 }
 
 @media only screen and (max-width: 1280px) {
@@ -580,96 +558,4 @@ header .header-p {
             align-items: center;
   }
 }
-
-@media only screen and (max-width: 768px) {
-  .blog-preview-container {
-    width: 100%;
-    height: 400px;
-    padding: 1rem;
-    background: #fff;
-    -webkit-box-shadow: 2px 2px 15px -7px rgba(0, 0, 0, 0.75);
-    box-shadow: 2px 2px 15px -7px rgba(0, 0, 0, 0.75);
-  }
-  .blog-preview-container .blog-title-container {
-    height: 15%;
-  }
-  .img-wrapper-large {
-    width: 100%;
-    height: 200px;
-    overflow: hidden;
-  }
-  .img-large {
-    width: 100%;
-    -o-object-fit: none;
-       object-fit: none;
-    -o-object-position: 50% -800%;
-       object-position: 50% -800%;
-  }
-}
-
-@media only screen and (max-width: 700px) {
-  .blog-preview-container {
-    width: 100%;
-    height: 400px;
-    padding: 1rem;
-    background: #fff;
-    -webkit-box-shadow: 2px 2px 15px -7px rgba(0, 0, 0, 0.75);
-    box-shadow: 2px 2px 15px -7px rgba(0, 0, 0, 0.75);
-  }
-  .blog-preview-container .blog-title-container {
-    height: 20%;
-  }
-  .img-wrapper-large {
-    width: 100%;
-    height: 130px;
-    overflow: hidden;
-  }
-  .img-large {
-    width: 100%;
-    -o-object-fit: none;
-       object-fit: none;
-    -o-object-position: 100% 80%;
-       object-position: 100% 80%;
-  }
-}
-
-@-webkit-keyframes menuIn {
-  0% {
-    -webkit-transform: translateY(-100vh);
-            transform: translateY(-100vh);
-  }
-  100% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-  }
-}
-
-@keyframes menuIn {
-  0% {
-    -webkit-transform: translateY(-100vh);
-            transform: translateY(-100vh);
-  }
-  100% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-  }
-}
-
-@-webkit-keyframes opacityIn {
-  0% {
-    opacity: 0.6;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes opacityIn {
-  0% {
-    opacity: 0.6;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-/*# sourceMappingURL=blog.style.css.map */
+/*# sourceMappingURL=personal-data.css.map */
