--- a/styles/term-of-use/term-of-use.css
+++ b/styles/term-of-use/term-of-use.css
@@ -112,7 +112,7 @@ body {
 }
 
 .h2 {
-  font-size: 1.2rem;
+  font-size: 1.6rem;
   font-weight: 700;
   margin: 2rem 0;
 }
@@ -237,6 +237,11 @@ header .header-p {
   width: 100%;
 }
 
+.ul .li {
+  text-align: justify;
+  margin: .5rem 0;
+}
+
 .end-button-wrapper {
   width: 100%;
   height: 5rem;
@@ -246,6 +251,7 @@ header .header-p {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin: 2rem 0;
 }
 
 .end-button-wrapper .end-button {
@@ -297,7 +303,7 @@ header .header-p {
 }
 
 .footer .footer-inner .footer-col-2 .footer-col-2-p {
-  font-size: 0.8rem;
+  font-size: .8rem;
 }
 
 .footer .footer-inner .footer-col-2 .footer-col-2-last-div {
@@ -307,7 +313,7 @@ header .header-p {
 }
 
 .footer .footer-inner .footer-col-2 .footer-col-2-last-div .link-spacer {
-  margin: 0 0.5rem;
+  margin: 0 .5rem;
 }
 
 .footer .footer-link {
@@ -574,4 +580,4 @@ header .header-p {
             align-items: center;
   }
 }
-/*# sourceMappingURL=personal-data.css.map */
+/*# sourceMappingURL=term-of-use.css.map */
