--- a/styles/term-of-use/term-of-use.scss
+++ b/styles/term-of-use/term-of-use.scss
@@ -108,7 +108,7 @@ body {
 }
 
 .h2 {
-  font-size: 1.2rem;
+  font-size: 1.6rem;
   font-weight: 700;
   margin: 2rem 0;
 }
@@ -215,11 +215,19 @@ header {
   width: 100%;
 }
 
+.ul {
+  .li {
+    text-align: justify;
+    margin: .5rem 0;
+  }
+}
+
 .end-button-wrapper {
   width: 100%;
   height: 5rem;
   display: flex;
   justify-content: center;
+  margin: 2rem 0;
 
   .end-button {
     width: 9rem;
@@ -256,14 +264,14 @@ header {
       // justify-content: center;
       align-items: center;
 
-      .footer-col-2-p {
-        font-size: 0.8rem;
+      .footer-col-2-p{
+        font-size: .8rem;
       }
 
-      .footer-col-2-last-div {
+      .footer-col-2-last-div{
         display: flex;
-        .link-spacer {
-          margin: 0 0.5rem;
+        .link-spacer{
+          margin: 0 .5rem;
         }
       }
     }
