--- a/styles/term-of-use/term-of-use.scss
+++ b/styles/term-of-use/term-of-use.scss
@@ -108,9 +108,10 @@ body {
 }
 
 .h2 {
-  font-size: 1.6rem;
+  font-size: 1.2rem;
   font-weight: 700;
   margin: 2rem 0;
+  color: grey;
 }
 .h3 {
   font-size: 1.1rem;
@@ -215,10 +216,22 @@ header {
   width: 100%;
 }
 
+.current-version-header{
+  font-size: 1rem;
+  color: black;
+  margin-top: 2rem;
+  font-weight: 600;
+
+  .date-span{
+    font-size: .9rem;
+  }
+}
+
 .ul {
   .li {
     text-align: justify;
     margin: .5rem 0;
+    color: grey;
   }
 }
 
@@ -280,7 +293,7 @@ header {
   .footer-link {
     color: $fourth-color;
     text-decoration: none;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
   }
   .footer-ul {
     display: flex;
@@ -330,6 +343,14 @@ header {
 @media only screen and (max-width: 1280px) {
   //COMMON CLASSES ==================================================================================================================
 
+  .footer{
+    .link-h5{
+      font-size: .6rem;
+    }
+    .footer-link{
+      font-size: .8rem;
+    }
+  }
   .footer-inner {
     width: 85vw;
   }
