--- a/styles/index.style.scss
+++ b/styles/index.style.scss
@@ -938,6 +938,15 @@
       // width: 100% !important;
     }
   }
+
+  .footer{
+    .footer-link{
+      font-size: .8rem;
+    }
+    .link-h5{
+      font-size: .6rem;
+    }
+  }
 }
 @media only screen and (max-width: 1080px) {
   .backBtn {
