--- a/styles/personal-data/personal-data.css
+++ b/styles/personal-data/personal-data.css
@@ -237,6 +237,17 @@ header .header-p {
   width: 100%;
 }
 
+.current-version-header {
+  font-size: 1rem;
+  color: black;
+  margin-top: 2rem;
+  font-weight: 600;
+}
+
+.current-version-header .date-span {
+  font-size: .9rem;
+}
+
 .end-button-wrapper {
   width: 100%;
   height: 5rem;
@@ -313,7 +324,7 @@ header .header-p {
 .footer .footer-link {
   color: #02122C;
   text-decoration: none;
-  font-size: 0.9rem;
+  font-size: 0.7rem;
 }
 
 .footer .footer-ul {
@@ -349,7 +360,7 @@ header .header-p {
 .footer .link-h5 {
   text-decoration: none;
   color: #0770E7;
-  font-size: 11px;
+  font-size: .6rem;
   text-align: center;
 }
 
@@ -375,6 +386,12 @@ header .header-p {
   }
   .inner {
     width: 70%;
+  }
+  .footer .link-h5 {
+    font-size: .6rem;
+  }
+  .footer .footer-link {
+    font-size: .8rem;
   }
   .col-2-right-widget {
     display: -ms-grid;
