--- a/styles/personal-data/personal-data.scss
+++ b/styles/personal-data/personal-data.scss
@@ -215,6 +215,17 @@ header {
   width: 100%;
 }
 
+.current-version-header{
+  font-size: 1rem;
+  color: black;
+  margin-top: 2rem;
+  font-weight: 600;
+
+  .date-span{
+    font-size: .9rem;
+  }
+}
+
 .end-button-wrapper {
   width: 100%;
   height: 5rem;
@@ -272,7 +283,7 @@ header {
   .footer-link {
     color: $fourth-color;
     text-decoration: none;
-    font-size: 0.9rem;
+    font-size: 0.7rem;
   }
   .footer-ul {
     display: flex;
@@ -301,7 +312,8 @@ header {
   .link-h5 {
     text-decoration: none;
     color: $main-color;
-    font-size: 11px;
+    font-size: .6rem;
+    // white-space: nowrap;
     text-align: center;
   }
 
@@ -328,6 +340,15 @@ header {
 
   .inner {
     width: 70%;
+  }
+
+  .footer{
+    .link-h5{
+      font-size: .6rem;
+    }
+    .footer-link{
+      font-size: .8rem;
+    }
   }
 
   // column-containers - - - - - - - - - - - - - - - - - - - - - - -- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
