--- a/styles/term-of-use/term-of-use.css
+++ b/styles/term-of-use/term-of-use.css
@@ -112,9 +112,10 @@ body {
 }
 
 .h2 {
-  font-size: 1.6rem;
+  font-size: 1.2rem;
   font-weight: 700;
   margin: 2rem 0;
+  color: grey;
 }
 
 .h3 {
@@ -237,9 +238,21 @@ header .header-p {
   width: 100%;
 }
 
+.current-version-header {
+  font-size: 1rem;
+  color: black;
+  margin-top: 2rem;
+  font-weight: 600;
+}
+
+.current-version-header .date-span {
+  font-size: .9rem;
+}
+
 .ul .li {
   text-align: justify;
   margin: .5rem 0;
+  color: grey;
 }
 
 .end-button-wrapper {
@@ -319,7 +332,7 @@ header .header-p {
 .footer .footer-link {
   color: #02122C;
   text-decoration: none;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
 }
 
 .footer .footer-ul {
@@ -376,6 +389,12 @@ header .header-p {
 }
 
 @media only screen and (max-width: 1280px) {
+  .footer .link-h5 {
+    font-size: .6rem;
+  }
+  .footer .footer-link {
+    font-size: .8rem;
+  }
   .footer-inner {
     width: 85vw;
   }
