--- a/styles/personal-data/personal-data.css
+++ b/styles/personal-data/personal-data.css
@@ -266,6 +266,16 @@ header .header-p {
   color: white;
   background: #0770E7;
   font-size: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-decoration: none;
 }
 
 .footer {
