--- a/styles/personal-data/personal-data.scss
+++ b/styles/personal-data/personal-data.scss
@@ -239,6 +239,10 @@ header {
     color: white;
     background: $main-color;
     font-size: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
   }
 }
 
